add install script

--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -1,4 +1,6 @@
 README.md
+install.sh
+bootstrap.sh
 
 *.txt   # ignore *.txt in the target directory
 */*.txt # ignore *.txt in subdirectories of the target directory
